--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ astra-sim-alibabacloud/build/simai_analytical/build/
 astra-sim-alibabacloud/build/astra_ns3/build/
 astra-sim-alibabacloud/extern/
 bin/
+build/
 results/
 test/log/
 *.log
 .cur*
 .DS_Store
+ncclFlowModel*
